--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -13,6 +13,14 @@
 #   status: Can be "draft", "published", or "archived". Do not set to
 #           "archived" until appropriate redirects are set up.
 #   category: Can be "Workflow example" or "How-to"
+#   topics: List of topic names. Choose from
+#             * Chemistry
+#             * Dynamic circuits
+#             * Error mitigation
+#             * Optimization
+#             * Qiskit Patterns
+#             * Scheduling
+#             * Transpilation
 #   reading_time: Rough number of minutes needed to read the page
 #   catalog_featured: Whether the page should be in the featured section in the catalog.
 
@@ -24,6 +32,7 @@
   slug: chsh-inequality
   local_path: chsh-inequality
   status: published
+  topics: ["Scheduling"]
   category: Workflow example
   reading_time: 20
   catalog_featured: true
@@ -35,6 +44,7 @@
   local_path: grovers-algorithm
   status: published
   category: Workflow example
+  topics: ["Scheduling"]
   reading_time: 15
   catalog_featured: false
 
@@ -47,6 +57,7 @@
   local_path: quantum-approximate-optimization-algorithm
   status: published
   category: Workflow example
+  topics: ["Scheduling"]
   reading_time: 20
   catalog_featured: true
 
@@ -58,6 +69,7 @@
   local_path: submitting-transpiled-circuits
   status: published
   category: How-to
+  topics: ["Transpilation"]
   reading_time: 15
   catalog_featured: false
 
@@ -69,6 +81,7 @@
   local_path: variational-quantum-eigensolver
   status: published
   category: Workflow example
+  topics: ["Scheduling"]
   reading_time: 28
   catalog_featured: true
 
@@ -81,6 +94,7 @@
   local_path: repeat-until-success
   status: published
   category: How-to
+  topics: ["Dynamic circuits"]
   reading_time: 25
   catalog_featured: false
 
@@ -92,6 +106,7 @@
   local_path: build-repetition-codes
   status: published
   category: How-to
+  topics: ["Dynamic circuits"]
   reading_time: 15
   catalog_featured: false
 
@@ -103,6 +118,7 @@
   local_path: explore-composer
   status: published
   category: How-to
+  topics: []
   reading_time: 95
   catalog_featured: false
 
@@ -114,6 +130,7 @@
   local_path: combine-error-mitigation-options-with-the-estimator-primitive
   status: published
   category: Workflow example
+  topics: ["Error mitigation", "Qiskit Patterns"]
   reading_time: 180
   catalog_featured: true
 
