--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "check:stale-images": "node -r esbuild-register scripts/commands/checkStaleImages.ts",
     "fmt": "prettier --write .",
     "test": "jest",
+    "test:tutorial-uploader": "JEST_TEST_TUTORIAL_UPLOADER=true jest scripts/tutorial-uploader",
     "typecheck": "tsc",
     "regen-apis": "node -r esbuild-register scripts/commands/regenerateApiDocs.ts",
     "gen-api": "node -r esbuild-register scripts/commands/updateApiDocs.ts",
