--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -29,3 +29,5 @@ lessons:
   - path: combine-error-mitigation-options-with-the-estimator-primitive
     urlStaging: tutorials/58d982db-9510-4815-a13c-c81abae1507f
     urlProduction: tutorials/5f0507b3-3eae-4ccd-9a7a-74edd5a157a3
+  - path: transpile-circuits-in-a-pulse-efficient-way
+    urlStaging: 89551796-8a14-472a-8e82-4142bc214db9
