Set up topics and categories automatically

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gen-api": "node -r esbuild-register scripts/commands/updateApiDocs.ts",
     "make-historical": "node -r esbuild-register scripts/commands/convertApiDocsToHistorical.ts",
     "tutorial:sync": "node -r esbuild-register scripts/tutorial-uploader/sync.ts",
-    "tutorial:validate": "node -r esbuild-register scripts/tutorial-uploader/validate-config.ts"
+    "tutorial:validate": "node -r esbuild-register scripts/tutorial-uploader/validate-config.ts",
+    "tutorial:setup-testing": "node -r esbuild-register scripts/tutorial-uploader/setup-for-testing.ts"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.29",
