Add notebook to list

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -54,4 +54,5 @@ notebooks_no_mock = [
     "tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
+    "tutorials/transpile-circuits-in-a-pulse-efficient-way/transpile-circuits-in-a-pulse-efficient-way.ipynb",
 ]
