--- a/.github/workflows/deploy-tutorials.yml
+++ b/.github/workflows/deploy-tutorials.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install Node.js dependencies
         run: npm ci
       - name: Upload tutorials
-        run: npm run tutorials:sync
+        run: npm run tutorial:sync
         env:
           LEARNING_API_TOKEN: ${{ secrets.LEARNING_API_TOKEN }}
           LEARNING_API_URL: ${{ vars.LEARNING_API_URL }}
