add to notebooks.toml

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -8,6 +8,7 @@ notebooks_normal_test = [
     "docs/build/pulse.ipynb",
     "docs/build/save-circuits.ipynb",
     "docs/run/dynamic-circuits-considerations.ipynb",
+    "docs/run/error-mitigation-explanation.ipynb",
     "docs/run/get-backend-information.ipynb",
     "docs/run/save-jobs.ipynb",
     "docs/run/visualize-results.ipynb",
