--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -162,7 +162,7 @@ notifications:
     - "@beckykd"
     - "@abbycross"
     - "`@blakejohnson`"
-  "docs/run/error-mitigation-explanation.ipynb":
+  "docs/run/error-mitigation-explanation":
     - "@kevinsung"
   "docs/run/sessions":
     - "@jyu00"
