Updated qiskit_bot.yaml to include run/rest-api-* owners

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -220,6 +220,32 @@ notifications:
     - "`@lerongil`"
     - "@jyu00"
     - "@beckykd"
+  "docs/run/rest-api-estimator":
+    - "@syedfarhan"
+    - "@jogreiner"
+    - "@paco"
+    - "@HamedBagherpoor"
+  "docs/run/rest-api-execution-modes":
+    - "@syedfarhan"
+    - "@jogreiner"
+    - "@paco"
+    - "@HamedBagherpoor"
+  "docs/run/rest-api-initialize-account":
+    - "@syedfarhan"
+    - "@jogreiner"
+    - "@paco"
+    - "@HamedBagherpoor"
+  "docs/run/rest-api-sampler":
+    - "@syedfarhan"
+    - "@jogreiner"
+    - "@paco"
+    - "@HamedBagherpoor"
+  "docs/run/rest-api-transpilation":
+    - "@syedfarhan"
+    - "@jogreiner"
+    - "@paco"
+    - "@HamedBagherpoor"
+  
   # migration-guides
   "docs/migration-guides/index":
     - "@javabster"
