Updated qiskit_bot.yaml to include run/rest-api-* owners

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -224,27 +224,27 @@ notifications:
     - "@syedfarhan"
     - "@jogreiner"
     - "@paco"
-    - "@HamedBagherpoor"
+    - "@hamed.mohammadbagherp"
   "docs/run/rest-api-execution-modes":
     - "@syedfarhan"
     - "@jogreiner"
     - "@paco"
-    - "@HamedBagherpoor"
+    - "@hamed.mohammadbagherp"
   "docs/run/rest-api-initialize-account":
     - "@syedfarhan"
     - "@jogreiner"
     - "@paco"
-    - "@HamedBagherpoor"
+    - "@hamed.mohammadbagherp"
   "docs/run/rest-api-sampler":
     - "@syedfarhan"
     - "@jogreiner"
     - "@paco"
-    - "@HamedBagherpoor"
+    - "@hamed.mohammadbagherp"
   "docs/run/rest-api-transpilation":
     - "@syedfarhan"
     - "@jogreiner"
     - "@paco"
-    - "@HamedBagherpoor"
+    - "@hamed.mohammadbagherp"
   
   # migration-guides
   "docs/migration-guides/index":
