Updated qiskit_bot.yaml to include run/rest-api-* owners- github usernames

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -221,31 +221,30 @@ notifications:
     - "@jyu00"
     - "@beckykd"
   "docs/run/rest-api-estimator":
-    - "@syedfarhan"
-    - "@jogreiner"
-    - "@paco"
-    - "@hamed.mohammadbagherp"
+    - "@born-2learn"
+    - "@johannesgreiner"
+    - "@pacomf"
+    - "@Bagherpoor"
   "docs/run/rest-api-execution-modes":
-    - "@syedfarhan"
-    - "@jogreiner"
-    - "@paco"
-    - "@hamed.mohammadbagherp"
+    - "@born-2learn"
+    - "@johannesgreiner"
+    - "@pacomf"
+    - "@Bagherpoor"
   "docs/run/rest-api-initialize-account":
-    - "@syedfarhan"
-    - "@jogreiner"
-    - "@paco"
-    - "@hamed.mohammadbagherp"
+    - "@born-2learn"
+    - "@johannesgreiner"
+    - "@pacomf"
+    - "@Bagherpoor"
   "docs/run/rest-api-sampler":
-    - "@syedfarhan"
-    - "@jogreiner"
-    - "@paco"
-    - "@hamed.mohammadbagherp"
+    - "@born-2learn"
+    - "@johannesgreiner"
+    - "@pacomf"
+    - "@Bagherpoor"
   "docs/run/rest-api-transpilation":
-    - "@syedfarhan"
-    - "@jogreiner"
-    - "@paco"
-    - "@hamed.mohammadbagherp"
-  
+    - "@born-2learn"
+    - "@johannesgreiner"
+    - "@pacomf"
+    - "@Bagherpoor"
   # migration-guides
   "docs/migration-guides/index":
     - "@javabster"
