--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -157,7 +157,12 @@ notifications:
     - "@beckykd"
     - "@abbycross"
     - "`@blakejohnson`"
-  "docs/run/advanced-runtime-options":
+  "docs/run/configure-error-suppression":
+    - "@jyu00"
+    - "@beckykd"
+    - "@abbycross"
+    - "`@blakejohnson`"
+  "docs/run/runtime-options-overview":
     - "@jyu00"
     - "@beckykd"
     - "@abbycross"
