--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -162,6 +162,8 @@ notifications:
     - "@beckykd"
     - "@abbycross"
     - "`@blakejohnson`"
+  "docs/run/error-mitigation-explanation":
+    - "@kevinsung"
   "docs/run/sessions":
     - "@jyu00"
     - "@beckykd"
