Add comments reminding to update

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -21,6 +21,7 @@
 #             * Qiskit Patterns
 #             * Scheduling
 #             * Transpilation
+#           If these change, make sure to update scripts/tutorial-uploader/setup-for-testing.ts
 #   reading_time: Rough number of minutes needed to read the page
 #   catalog_featured: Whether the page should be in the featured section in the catalog.
 
