--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -1,5 +1,6 @@
 # For notebooks to be tested "normally" (no mocking)
-notebooks_normal_test = [
+# Todo: remove old notebooks
+notebooks_normal_test = [    
     "docs/build/circuit-construction.ipynb",
     "docs/build/circuit-library.ipynb",
     "docs/build/circuit-visualization.ipynb",
@@ -29,6 +30,34 @@ notebooks_normal_test = [
     "docs/verify/simulate-with-qiskit-aer.ipynb",
     "docs/verify/stabilizer-circuit-simulation.ipynb",
     "tutorials/explore-composer/explore-composer.ipynb",
+    "docs/guides/circuit-construction.ipynb",
+    "docs/guides/circuit-library.ipynb",
+    "docs/guides/circuit-visualization.ipynb",
+    "docs/guides/classical-feedforward-and-control-flow.ipynb",
+    "docs/guides/operators-overview.ipynb",
+    "docs/guides/pulse.ipynb",
+    "docs/guides/save-circuits.ipynb",
+    "docs/guides/dynamic-circuits-considerations.ipynb",
+    "docs/guides/error-mitigation-explanation.ipynb",
+    "docs/guides/get-backend-information.ipynb",
+    "docs/guides/save-jobs.ipynb",
+    "docs/guides/visualize-results.ipynb",
+    "docs/guides/common-parameters.ipynb",
+    "docs/guides/create-a-transpiler-plugin.ipynb",
+    "docs/guides/custom-backend.ipynb",
+    "docs/guides/custom-transpiler-pass.ipynb",
+    "docs/guides/defaults-and-configuration-options.ipynb",
+    "docs/guides/dynamical-decoupling-pass-manager.ipynb",
+    "docs/guides/representing_quantum_computers.ipynb",
+    "docs/guides/set-optimization.ipynb",
+    "docs/guides/transpile-with-pass-managers.ipynb",
+    "docs/guides/transpiler-plugins.ipynb",
+    "docs/guides/transpiler-stages.ipynb",
+    "docs/guides/building_noise_models.ipynb",
+    "docs/guides/local-testing-mode.ipynb",
+    "docs/guides/plot-quantum-states.ipynb",
+    "docs/guides/simulate-with-qiskit-aer.ipynb",
+    "docs/guides/stabilizer-circuit-simulation.ipynb",
 ]
 
 # Don't test the following notebooks (this section can include glob patterns)
@@ -55,4 +84,5 @@ notebooks_no_mock = [
     "tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
+    "docs/guides/hello-world.ipynb",
 ]
