add to qiskit bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -55,6 +55,8 @@ notifications:
     - "@Cryoris"
   "docs/build/operators_overview":
     - "`@mtreinish`"
+  "docs/build/operator-class":
+    - "`@mtreinish`"
   "docs/build/pulse":
     - "`@nkanazawa1989`"
     - "@abbycross"
