--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -167,7 +167,7 @@ notifications:
     - "@beckykd"
     - "@abbycross"
     - "`@blakejohnson`"
-  "docs/run/runtime-options-overview 2":
+  "docs/run/runtime-options-overview-2":
     - "@jyu00"
     - "@beckykd"
     - "@abbycross"
