--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -30,7 +30,7 @@
     In this tutorial, you will run an experiment on a quantum computer to
     demonstrate the violation of the CHSH inequality with the Estimator
     primitive.
-  slug: chsh-inequality
+  slug: chsh-inequality  # Do not change this
   local_path: chsh-inequality
   status: published
   topics: ["Scheduling"]
@@ -41,7 +41,7 @@
 - title: Grover's algorithm
   short_description: >
     Demonstrating how to create Grover's algorithm with Qiskit Runtime
-  slug: grovers-algorithm
+  slug: grovers-algorithm  # Do not change this
   local_path: grovers-algorithm
   status: published
   category: Workflow example
@@ -54,7 +54,7 @@
     Quantum approximate optimization algorithm is a hybrid algorithm to solve
     combinatorial optimization problems. This tutorial uses Qiskit Runtime to
     solve a simple max-cut problem.
-  slug: quantum-approximate-optimization-algorithm
+  slug: quantum-approximate-optimization-algorithm  # Do not change this
   local_path: quantum-approximate-optimization-algorithm
   status: published
   category: Workflow example
@@ -66,7 +66,7 @@
   short_description: >
     In this tutorial, we'll disable automatic transpilation and take you
     through the full process of creating, transpiling, and submitting circuits.
-  slug: submit-transpiled-circuits
+  slug: submit-transpiled-circuits  # Do not change this
   local_path: submitting-transpiled-circuits
   status: published
   category: How-to
@@ -78,7 +78,7 @@
   short_description: >
     Variational quantum algorithms are hybrid-algorithms for observing the
     utility of quantum computation on noisy, near-term IBM Quantum systems.
-  slug: variational-quantum-eigensolver
+  slug: variational-quantum-eigensolver  # Do not change this
   local_path: variational-quantum-eigensolver
   status: published
   category: Workflow example
@@ -91,7 +91,7 @@
     This tutorial demonstrates IBM dynamic-circuits to use mid-circuit
     measurements to produce a circuit that repeats until a successful syndrome
     measurement.
-  slug: repeat-until-success
+  slug: repeat-until-success  # Do not change this
   local_path: repeat-until-success
   status: published
   category: How-to
@@ -103,7 +103,7 @@
   short_description: >
     This tutorial demonstrates how to build basic repetition codes using IBM
     dynamic circuits, an example of basic quantum error correction (QEC).
-  slug: build-repetition-codes
+  slug: build-repetition-codes  # Do not change this
   local_path: build-repetition-codes
   status: published
   category: How-to
@@ -115,7 +115,7 @@
   short_description: >
     Learn how to use IBM Quantum Composer to build quantum circuits and run
     them on IBM Quantum systems and simulators.
-  slug: explore-gates-and-circuits-with-the-quantum-composer
+  slug: explore-gates-and-circuits-with-the-quantum-composer  # Do not change this
   local_path: explore-composer
   status: published
   category: How-to
@@ -127,7 +127,7 @@
   short_description: >
     Combine error mitigation options for utility-scale experiments using 100Q+
     IBM Quantum systems and the Qiskit Runtime Estimator primitive.
-  slug: combine-error-mitigation-options-with-the-estimator-primitive
+  slug: combine-error-mitigation-options-with-the-estimator-primitive  # Do not change this
   local_path: combine-error-mitigation-options-with-the-estimator-primitive
   status: published
   category: Workflow example
