Add patterns index validation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check:internal-links": "node -r esbuild-register scripts/commands/checkInternalLinks.ts",
     "check:external-links": "node -r esbuild-register scripts/commands/checkExternalLinks.ts",
     "check:pages-render": "node -r esbuild-register scripts/commands/checkPagesRender.ts",
+    "check:patterns-index": "node -r esbuild-register scripts/commands/checkPatternsIndex.ts",
     "check:orphan-pages": "node -r esbuild-register scripts/commands/checkOrphanPages.ts",
     "check:qiskit-bot": "node -r esbuild-register scripts/commands/checkQiskitBotFiles.ts",
     "check:stale-images": "node -r esbuild-register scripts/commands/checkStaleImages.ts",
