--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,10 +1,9 @@
-name: 🪲 Content bug or inaccuracy
+name: 🪲 Content bug or inaccuracy with Platform docs (_not_ API reference docs)
 description: Report typos, bugs, out-of-date content, broken links, etc.
 labels: ["bug 🐛", "content 📄"]
 assignees:
   - abbycross
   - beckykd
-  - javabster
 
 body:
   - type: markdown
