Update "operators overview" page to highlight SparsePauliOp and split in-depth Operator coverage to separate page (#1517)
Closes #1440 

@kevinsung, here's what I have so far in terms of content to include. I
think it might be worth mentioning the overloaded operators for the
`SparsePauliOp` class and demonstrate some of the algebra that can be
done.

---------

Co-authored-by: Kevin J. Sung <kevjsung@umich.edu>

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -34,6 +34,7 @@ notebooks_normal_test = [
     "docs/build/circuit-library.ipynb",
     "docs/build/circuit-visualization.ipynb",
     "docs/build/classical-feedforward-and-control-flow.ipynb",
+    "docs/build/operator-class.ipynb",
     "docs/build/operators-overview.ipynb",
     "docs/build/pulse.ipynb",
     "docs/build/save-circuits.ipynb",
