--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,4 +1,4 @@
-name: 🪲 Content bug or inaccuracy with Platform docs (_not_ API reference docs)
+name: 🪲 Content bug or inaccuracy with non-API docs
 description: Report typos, bugs, out-of-date content, broken links, etc.
 labels: ["bug 🐛", "content 📄"]
 assignees:
