add to qiskit_bot.yml

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -34,6 +34,7 @@ notifications:
   "docs/start/latest-updates":
     - "@javabster"
     - "@frankharkins"
+    - "@abbycross"
   # build
   "docs/build/index":
     - "@javabster"
