--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -31,6 +31,8 @@ notifications:
     - "`@mtreinish`"
     - "`@jakelishman`"
     - "@beckykd"
+  "docs/start/responsible-quantum-computing":
+    - "@abbycross"
   # build
   "docs/build/index":
     - "@javabster"
