Add "Latest updates" page (#1411)
Adds a latest updates page with some initial content. Closes #1301.

I've prioritised news that requires user action (i.e. deprecations), but
open to other ideas too.

Points from a recent meeting:
- We will want product owners to write a release summary for each
release - and specify that the url out to the release notes should
specify the version (this is mentioned in the Docs overview and
publishing processes page)
- Highlight product blogs, product announcements, and latest versions of
each API ref release
- Duplicate "what's new in the docs" from the announcements

---------

Co-authored-by: Arnau Casau <47946624+arnaucasau@users.noreply.github.com>
Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -31,6 +31,8 @@ notifications:
     - "`@mtreinish`"
     - "`@jakelishman`"
     - "@beckykd"
+  "docs/start/latest-updates":
+    - "@abbycross"
   # build
   "docs/build/index":
     - "@javabster"
