--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -28,6 +28,8 @@ notebooks_normal_test = [
     "docs/guides/plot-quantum-states.ipynb",
     "docs/guides/simulate-with-qiskit-aer.ipynb",
     "docs/guides/simulate-stabilizer-circuits.ipynb",
+    "docs/guides/operator-class.ipynb",
+    "docs/guides/error-mitigation-and-suppression-techniques.ipynb",
     "tutorials/explore-composer/explore-composer.ipynb",
     # Todo: remove old notebooks
     "docs/build/circuit-construction.ipynb",
