Add qaoa to nb-tester CI

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -87,6 +87,7 @@ notebooks_no_mock = [
     "tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
+    "tutorials/qaoa-utility-scale/qopt_example.ipynb",
     # Todo: remove old notebook
     "docs/start/hello-world.ipynb",
 ]
