--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -220,8 +220,38 @@ notifications:
   "docs/api/migration-guides/qiskit-quantum-instance":
     - "@ElePT"
   "docs/api/migration-guides/qiskit-runtime":
+    - "@beckykd"
     - "@jyu00"
     - "@ElePT"
   "docs/api/migration-guides/qiskit-runtime-examples":
+    - "@beckykd"
     - "@jyu00"
     - "@ElePT"
+  "docs/api/migration-guides/local-simulators":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/api/migration-guides/qiskit-runtime-from-ibm-provider":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/api/migration-guides/qiskit-runtime-from-ibmq-provider":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/api/migration-guides/qiskit-runtime-options":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/api/migration-guides/qiskit-runtime-use-case":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/api/migration-guides/sessions":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
+  "docs/api/migration-guides/v2-primitives":
+    - "@jyu00"
+    - "@ElePT"
+    - "@beckykd"
