Utility scale QAOA tutorial (#1238)
Adds a new tutorial for QAOA with code for running experiment at utility
scale. All dependencies from Application modules are removed

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>

--- a/scripts/nb-tester/notebooks.toml
+++ b/scripts/nb-tester/notebooks.toml
@@ -57,4 +57,5 @@ notebooks_no_mock = [
     "tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb",
     "tutorials/repeat-until-success/repeat-until-success.ipynb",
     "tutorials/build-repetition-codes/build-repetition-codes.ipynb",
+    "tutorials/qaoa-utility-scale/qopt_example.ipynb",
 ]
