Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -1,7 +1,7 @@
 # This file contains all the metadata for tutorials controlled by this repo.
 #
 # WARNING: Do not change any "slugs" until appropriate redirects are set up.
-# Speak to Abby Mitchell, Eric Arellano, or Frank Harkins to set up redirects.
+# Speak to the learning platform team to set up redirects.
 # See /tutorials/README.md for instructions on adding a new tutorial.
 #
 # Description of values:
