Update info (and add note about reading time)
Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -22,7 +22,7 @@
 #             * Scheduling
 #             * Transpilation
 #           If these change, make sure to update scripts/tutorial-uploader/setup-for-testing.ts
-#   reading_time: Rough number of minutes needed to read the page
+#   reading_time: Rough number of minutes needed to read the page, set to 0 for no reading time
 #   catalog_featured: Whether the page should be in the featured section in the catalog.
 
 - title: Solve utility-scale quantum optimization problems
@@ -34,5 +34,5 @@
   status: published
   topics: ["Optimization", "Qiskit Patterns"]
   category: Workflow example
-  reading_time: 40
+  reading_time: 0
   catalog_featured: false
