--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -29,7 +29,7 @@
   short_description: >
     Implement the Quantum Approximate Optimization Algorithm (QAOA) on a
     simple max-cut problem, then scale the problem to over 100 qubits.
-  slug: qaoa-utility-scale # Do not change this
+  slug: quantum-approximate-optimization-algorithm # Do not change this
   local_path: qaoa-utility-scale
   status: published
   topics: ["Optimization", "Qiskit Patterns"]
