--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   pr-preview:
-    name: PR preview cleanup
+    name: PR preview
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
     env:
@@ -42,6 +42,8 @@ jobs:
           ref: gh-pages
       - name: Deploy to GitHub Pages
         run: |
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
           git add .
           git commit -m "Deploy PR preview for PR ${{ github.event.pull_request.number }}"
           git push
