--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -24,6 +24,7 @@ jobs:
     if: github.event.pull_request.head.repo.full_name == github.repository
     env:
       PR_PREVIEW_PATH: pr-${{ github.event.pull_request.number }}
+      PR_PREVIEW_URL: https://qiskit.github.io/documentation/${{ env.PR_PREVIEW_PATH }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -32,6 +33,14 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Set up deployment status
+        uses: bobheadxi/deployments@v1
+        id: deployment
+        with:
+          step: start
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: pr_preview
 
       - name: Build static site
         run: scripts/pr_previews/builder.py ${{ env.PR_PREVIEW_PATH }} --proof-of-concept
@@ -45,3 +54,16 @@ jobs:
           git add .
           git commit -m "Deploy PR preview for PR ${{ github.event.pull_request.number }}"
           git push
+
+      - name: Determine deployment result
+        run: scripts/pr_previews/builder.py ${{ env.PR_PREVIEW_URL }}
+      - name: Report deployment status
+        uses: bobheadxi/deployments@v1
+        if: always()
+        with:
+          step: finish
+          token: ${{ github.token }}
+          env: ${{ steps.deployment.outputs.env }}
+          status: ${{ job.status }}
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          env_url: ${{ env.PR_PREVIEW_URL }}
