--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -24,7 +24,7 @@ jobs:
     if: github.event.pull_request.head.repo.full_name == github.repository
     env:
       PR_PREVIEW_PATH: pr-${{ github.event.pull_request.number }}
-      PR_PREVIEW_URL: https://qiskit.github.io/documentation/${{ env.PR_PREVIEW_PATH }}
+      PR_PREVIEW_URL: https://qiskit.github.io/documentation/pr-${{ github.event.pull_request.number }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
