--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -13,7 +13,9 @@
 name: PR preview cleanup
 on:
   workflow_dispatch:
-  branch: [main]
+  push:
+    branches:
+      - "main"
 
 jobs:
   preview-cleanup:
