--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -31,3 +31,5 @@ jobs:
 
       - name: Clean up PR previews
         run: scripts/pr_previews/cleanup.py
+        env:
+          GH_TOKEN: ${{ github.token }}
