Change tutorial description

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -39,7 +39,7 @@
 
 - title: Compare transpiler settings
   short_description: >
-    In this tutorial, we'll disable automatic transpilation and take you
+    In this tutorial, we'll explore the transpilation pipeline and take you
     through the full process of creating, transpiling, and submitting circuits.
   slug: compare-transpiler-settings # Do not change this
   local_path: compare-transpiler-settings
