Tutorial housekeeping - submit transpiled circuits (#1540)
closes #1139

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>
Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>

--- a/tutorials/learning-api.conf.yaml
+++ b/tutorials/learning-api.conf.yaml
@@ -36,3 +36,15 @@
   category: Workflow example
   reading_time: 0
   catalog_featured: false
+
+- title: Compare transpiler settings
+  short_description: >
+    In this tutorial, we'll explore the transpilation pipeline and take you
+    through the full process of creating, transpiling, and submitting circuits.
+  slug: compare-transpiler-settings # Do not change this
+  local_path: compare-transpiler-settings
+  status: published
+  topics: ["Transpilation"]
+  category: Workflow example
+  reading_time: 0
+  catalog_featured: false
