--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -33,6 +33,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+      - uses: docker/login-action@v3
+        with:
+          registry: icr.io
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Set up deployment status
         uses: bobheadxi/deployments@v1
@@ -47,8 +52,7 @@ jobs:
         run: >
           scripts/pr_previews/builder.py
           ${{ env.PR_PREVIEW_PATH }}
-          --basepath /documentation/${{ env.PR_PREVIEW_PATH }} 
-          --proof-of-concept
+          --basepath /documentation/${{ env.PR_PREVIEW_PATH }}
 
       - name: Deploy to GitHub Pages
         run: scripts/pr_previews/deploy.py ${{ env.PR_PREVIEW_PATH }}
