--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "hast-util-to-mdast": "^8.3.0",
     "hast-util-to-text": "^3.1.0",
     "is-absolute-url": "^4.0.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "markdown-link-extractor": "^3.1.0",
     "mdast": "^3.0.0",
     "mkdirp": "^3.0.1",
@@ -55,7 +55,7 @@
     "@playwright/test": "^1.45.2",
     "@types/fast-levenshtein": "^0.0.4",
     "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.14.198",
+    "@types/lodash-es": "^4.14.198",
     "@types/node": "^20.6.2",
     "@types/yargs": "^17.0.28",
     "esbuild": "^0.19.11",
