--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,14 @@ docs/.gitkeep
 .envrc
 .python-version
 latex_error.log
-
 .ipynb_checkpoints/
 .DS_Store
 __pycache__/
-
 node_modules
 tsconfig.tsbuildinfo
-
 /.out/
 /.sphinx-artifacts/
 poetry.lock
-
 .mypy_cache/
+/dist/
+/test-results/
