--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "fmt": "prettier --write .",
-    "test": "jest",
+    "test": "playwright test",
     "typecheck": "tsc",
     "check": "npm run check:qiskit-bot && npm run check:patterns-index && npm run check:metadata && npm run check:spelling && npm run check:internal-links && npm run check:orphan-pages && npm run check:fmt",
     "check:metadata": "node -r esbuild-register scripts/js/commands/checkMetadata.ts",
@@ -52,16 +52,14 @@
     "zx": "^7.2.3"
   },
   "devDependencies": {
-    "@swc/jest": "^0.2.29",
+    "@playwright/test": "^1.45.2",
     "@types/fast-levenshtein": "^0.0.4",
-    "@types/jest": "^29.5.5",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.14.198",
     "@types/node": "^20.6.2",
     "@types/yargs": "^17.0.28",
     "esbuild": "^0.19.11",
     "esbuild-register": "^3.5.0",
-    "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
