Add script for spellcheck

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typecheck": "tsc",
     "check": "npm run check:qiskit-bot && npm run check:patterns-index && npm run check:metadata && npm run check:spelling && npm run check:internal-links && npm run check:orphan-pages && npm run check:fmt",
     "check:metadata": "tsx scripts/js/commands/checkMetadata.ts",
-    "check:spelling": "cspell --no-progress docs/**/*.mdx docs/api/**/*.mdx --config scripts/config/cspell/cSpell.json",
+    "check:spelling": "tsx scripts/js/commands/checkSpelling.ts",
     "check:fmt": "prettier --check .",
     "check:internal-links": "tsx scripts/js/commands/checkInternalLinks.ts",
     "check:external-links": "tsx scripts/js/commands/checkExternalLinks.ts",
