--- a/package.json
+++ b/package.json
@@ -4,24 +4,29 @@
   "description": "The documentation content home for https://docs.quantum.ibm.com.",
   "author": "Qiskit Development Team",
   "license": "Apache-2.0",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "prepare": "tsc",
     "fmt": "prettier --write .",
-    "test": "jest",
+    "test": "playwright test",
     "typecheck": "tsc",
     "check": "npm run check:qiskit-bot && npm run check:patterns-index && npm run check:metadata && npm run check:spelling && npm run check:internal-links && npm run check:orphan-pages && npm run check:fmt",
-    "check:metadata": "node -r esbuild-register scripts/js/commands/checkMetadata.ts",
+    "check:metadata": "tsx scripts/js/commands/checkMetadata.ts",
     "check:spelling": "cspell --no-progress docs/**/*.mdx docs/api/**/*.mdx --config scripts/config/cspell/cSpell.json",
     "check:fmt": "prettier --check .",
-    "check:internal-links": "node -r esbuild-register scripts/js/commands/checkInternalLinks.ts",
-    "check:external-links": "node -r esbuild-register scripts/js/commands/checkExternalLinks.ts",
-    "check:pages-render": "node -r esbuild-register scripts/js/commands/checkPagesRender.ts",
-    "check:patterns-index": "node -r esbuild-register scripts/js/commands/checkPatternsIndex.ts",
-    "check:orphan-pages": "node -r esbuild-register scripts/js/commands/checkOrphanPages.ts",
-    "check:qiskit-bot": "node -r esbuild-register scripts/js/commands/checkQiskitBotFiles.ts",
-    "check:stale-images": "node -r esbuild-register scripts/js/commands/checkStaleImages.ts",
-    "regen-apis": "node -r esbuild-register scripts/js/commands/api/regenerateApiDocs.ts",
-    "gen-api": "node -r esbuild-register scripts/js/commands/api/updateApiDocs.ts",
-    "make-historical": "node -r esbuild-register scripts/js/commands/api/convertApiDocsToHistorical.ts"
+    "check:internal-links": "tsx scripts/js/commands/checkInternalLinks.ts",
+    "check:external-links": "tsx scripts/js/commands/checkExternalLinks.ts",
+    "check:pages-render": "tsx scripts/js/commands/checkPagesRender.ts",
+    "check:patterns-index": "tsx scripts/js/commands/checkPatternsIndex.ts",
+    "check:orphan-pages": "tsx scripts/js/commands/checkOrphanPages.ts",
+    "check:qiskit-bot": "tsx scripts/js/commands/checkQiskitBotFiles.ts",
+    "check:stale-images": "tsx scripts/js/commands/checkStaleImages.ts",
+    "regen-apis": "tsx scripts/js/commands/api/regenerateApiDocs.ts",
+    "gen-api": "tsx scripts/js/commands/api/updateApiDocs.ts",
+    "make-historical": "tsx scripts/js/commands/api/convertApiDocsToHistorical.ts"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
@@ -33,7 +38,7 @@
     "hast-util-to-mdast": "^8.3.0",
     "hast-util-to-text": "^3.1.0",
     "is-absolute-url": "^4.0.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "markdown-link-extractor": "^3.1.0",
     "mdast": "^3.0.0",
     "mkdirp": "^3.0.1",
@@ -52,17 +57,14 @@
     "zx": "^7.2.3"
   },
   "devDependencies": {
-    "@swc/jest": "^0.2.29",
+    "@playwright/test": "^1.45.2",
     "@types/fast-levenshtein": "^0.0.4",
-    "@types/jest": "^29.5.5",
     "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.14.198",
+    "@types/lodash-es": "^4.14.198",
     "@types/node": "^20.6.2",
     "@types/yargs": "^17.0.28",
-    "esbuild": "^0.19.11",
-    "esbuild-register": "^3.5.0",
-    "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "tsx": "^4.16.2",
     "typescript": "^5.2.2"
   }
 }
