--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "Apache-2.0",
   "type": "module",
   "files": [
-    "dist"
+    "dist",
+    "scripts/config/cspell"
   ],
   "scripts": {
     "prepare": "tsc",
