Add flag to action

--- a/.github/workflows/weekly-checks.yml
+++ b/.github/workflows/weekly-checks.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm ci
       - name: Start local Docker preview
         run: |
-          ./start &
+          ./start --apis &
           sleep 20
       - name: Check all pages render
         run: >
