Add internal link checker for other repositories

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "files": [
     "dist",
-    "scripts/config/cspell"
+    "scripts/config/cspell",
+    "scripts/config/internal-links.json"
   ],
   "scripts": {
     "prepare": "tsc",
@@ -27,7 +28,8 @@
     "check:stale-images": "tsx scripts/js/commands/checkStaleImages.ts",
     "regen-apis": "tsx scripts/js/commands/api/regenerateApiDocs.ts",
     "gen-api": "tsx scripts/js/commands/api/updateApiDocs.ts",
-    "make-historical": "tsx scripts/js/commands/api/convertApiDocsToHistorical.ts"
+    "make-historical": "tsx scripts/js/commands/api/convertApiDocsToHistorical.ts",
+    "save-internal-links": "tsx scripts/js/commands/saveInternalLinks.ts"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
