--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -40,7 +40,7 @@ runs:
         python -m venv .build-deps
         .build-deps/bin/python -m pip install 'setuptools<72.0' wheel
         .build-deps/bin/python -m pip wheel --no-build-isolation ibm-platform-services
-        rm -rf .build-deps:
+        rm -rf .build-deps
 
     - name: Install Python packages
       shell: bash
