Don't build PR previews for API docs

--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -16,6 +16,9 @@ on:
     paths:
       - "docs/**/*"
       - "public/images/**/*"
+      # PR previews don't build API docs.
+      - "!docs/api/**/*"
+      - "!public/images/api/**/*"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
