[ NEW PAGE ] Refactor primitives introduction/explanation (#1621)
Closes #1566 and will likely close #1565 and closes
https://github.com/Qiskit/documentation/issues/847. Currently working
through how to reorganize the pages/sections to build a more coherent
explanation around primitives and executing jobs on quantum hardware.

Right now the PR contains general information about what the metadata of
a `PrimitiveResult` and `PubResult` *might* contain, but I could go into
specific details of what options will return what data/metadata
attributes if that feels important.

---------

Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -255,6 +255,8 @@ notifications:
     - "@jyu00"
     - "@ElePT"
     - "@beckykd"
+  "docs/guides/primitive-input-output":
+    - "@kaelynj"
   "docs/guides/primitives-rest-api":
     - "@born-2learn"
     - "@johannesgreiner"
