Add logic to generate redirect file

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "regen-apis": "tsx scripts/js/commands/api/regenerateApiDocs.ts",
     "gen-api": "tsx scripts/js/commands/api/updateApiDocs.ts",
     "make-historical": "tsx scripts/js/commands/api/convertApiDocsToHistorical.ts",
+    "generate-historical-redirects": "tsx scripts/js/commands/api/generateHistoricalRedirects.ts",
     "save-internal-links": "tsx scripts/js/commands/saveInternalLinks.ts"
   },
   "dependencies": {
