toc and qiskit_bot files

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -272,3 +272,18 @@ notifications:
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
+  "docs/guides/first-serverless-program":
+    - "@pandasa123"
+    - "abbycross"
+  "docs/guides/manage-serverless-resources":
+    - "@pandasa123"
+    - "abbycross"
+  "docs/guides/port-code-qiskit-serverless":
+    - "@pandasa123"
+    - "abbycross"
+  "docs/guides/first-serverless-program":
+    - "@pandasa123"
+    - "abbycross"
+  "docs/guides/run-first-serverless-workload":
+    - "@pandasa123"
+    - "abbycross"
