--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -52,4 +52,7 @@ notebooks_that_submit_jobs = [
 # memory on a reasonable device.
 notebooks_no_mock = [
     "docs/guides/hello-world.ipynb",
+    "docs/guides/first-serverless-program.ipynb",
+    "docs/guides/run-first-serverless-workload.ipynb",
+    "docs/guides/manage-serverless-resources.ipynb",
 ]
