Added func to extract alt text

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: File metadata
         run: npm run check:metadata
+      - name: Check image alt text
+        run: npm run check:alt-text
       - name: Spellcheck
         run: npm run check:spelling
       - name: Check Qiskit bot config
