Restore Serverless 0.15.2 and test notebooks when changing requirements

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -16,6 +16,7 @@ on:
     paths:
       - "docs/**/*.ipynb"
       - "!docs/api/**/*"
+      - "scripts/nb-tester/**/*"
   workflow_dispatch:
 jobs:
   execute:
