--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -99,9 +99,17 @@ jobs:
               args.extend(files.split("\n"))
           subprocess.run(args, check=True)
 
+      - name: Detect changed notebooks
+        id: changed-notebooks
+        if: "!cancelled()"
+        run: |
+          echo "CHANGED_NOTEBOOKS<<EOF" >> $GITHUB_OUTPUT
+          git diff --name-only >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Upload executed notebooks
         if: "!cancelled()"
         uses: actions/upload-artifact@v4
         with:
           name: Executed notebooks
-          path: ${{ steps.all-changed-files.outputs.all_changed_files }}
+          path: ${{ steps.changed-notebooks.outputs.CHANGED_NOTEBOOKS }}
