--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -276,16 +276,16 @@ notifications:
     - "@Bagherpoor"
   "docs/guides/first-serverless-program":
     - "@pandasa123"
-    - "abbycross"
+    - "@abbycross"
   "docs/guides/manage-serverless-resources":
     - "@pandasa123"
-    - "abbycross"
+    - "@abbycross"
   "docs/guides/port-code-qiskit-serverless":
     - "@pandasa123"
-    - "abbycross"
+    - "@abbycross"
   "docs/guides/first-serverless-program":
     - "@pandasa123"
-    - "abbycross"
+    - "@abbycross"
   "docs/guides/run-first-serverless-workload":
     - "@pandasa123"
-    - "abbycross"
+    - "@abbycross"
