--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -144,7 +144,7 @@ notifications:
     - "@taalexander"
     - "`@kitbarton`"
     - "`@jakelishman`"
-  "docs/guides/qiskit-serverless":
+  "docs/guides/serverless":
     - "@jenglick"
     - "@pandasa123"
   "docs/guides/qiskit-transpiler-service":
@@ -274,18 +274,18 @@ notifications:
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
-  "docs/guides/first-serverless-program":
+  "docs/guides/serverless-first-program":
     - "@pandasa123"
     - "@abbycross"
-  "docs/guides/manage-serverless-resources":
+  "docs/guides/serverless-manage-resources":
     - "@pandasa123"
     - "@abbycross"
-  "docs/guides/port-code-qiskit-serverless":
+  "docs/guides/serverless-port-code":
     - "@pandasa123"
     - "@abbycross"
-  "docs/guides/first-serverless-program":
+  "docs/guides/serverless-first-program":
     - "@pandasa123"
     - "@abbycross"
-  "docs/guides/run-first-serverless-workload":
+  "docs/guides/serverless-run-first-workload":
     - "@pandasa123"
     - "@abbycross"
