--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Executed notebooks
-          path: ${{ steps.changed-notebooks.outputs.CHANGED_NOTEBOOKS }}
+          path: ${{ steps.changed-notebooks.outputs.CHANGED_NOTEBOOKS || 'no-changes' }}
 
   make_issue:
     name: Make issue on failure
