Fit page into IQP site

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -274,3 +274,5 @@ notifications:
     - "@johannesgreiner"
     - "@pacomf"
     - "@Bagherpoor"
+  "docs/guides/noise-learning":
+    - "@kaelynj"
