--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -190,7 +190,7 @@ notifications:
   "docs/guides/specify-observables-pauli":
     - "@Cryoris"
   "docs/guides/specify-runtime-options":
-    - "@beckyd"
+    - "@beckykd"
   "docs/guides/synthesize-unitary-operators":
     - "@Cryoris"
   "docs/guides/qpu-information":
