Run all notebooks when passed requirements file as argument

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -1,3 +1,8 @@
+# Changes to these files force CI to re-run all notebooks
+dependency_files = [
+    "scripts/nb-tester/requirements.txt",
+]
+
 # For notebooks to be tested "normally" (no mocking)
 notebooks_normal_test = [
     "docs/guides/construct-circuits.ipynb",
