Don't pass changed notebooks if dependency change detected

--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -47,8 +47,14 @@ jobs:
         id: all-changed-files
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
-          files: "{docs,scripts/nb-tester}/**/*.ipynb"
+          files: "docs/**/*.ipynb"
           separator: "\n"
+
+      - name: Get changed dependency files
+        id: changed-dependenciesd
+        uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
+        with:
+          files: "scripts/nb-tester/**/*"
 
       - name: Check for notebooks that require Linux
         id: linux-changed-files
@@ -93,9 +99,10 @@ jobs:
         shell: python
         run: |
           import subprocess
-          files = """${{ steps.all-changed-files.outputs.all_changed_files }}"""
+          changed_notebooks = """${{ steps.all-changed-files.outputs.all_changed_files }}"""
+          changed_deps = """${{ steps.changed-dependencies.outputs.all_changed_files }}"""
           args = ["tox", "--", "--write"]
-          if files:
+          if files and not changed_deps:
               args.extend(files.split("\n"))
           subprocess.run(args, check=True)
 
