--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -51,7 +51,7 @@ jobs:
           separator: "\n"
 
       - name: Get changed dependency files
-        id: changed-dependenciesd
+        id: changed-dependencies
         uses: tj-actions/changed-files@af2816c65436325c50621100d67f6e853cd1b0f1
         with:
           files: "scripts/nb-tester/**/*"
