Ajc/serverless-docs-take-three (#1902)
Added a few final notes

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -30,6 +30,9 @@ notebooks_normal_test = [
     "docs/guides/operator-class.ipynb",
     "docs/guides/error-mitigation-and-suppression-techniques.ipynb",        
     "docs/guides/error-mitigation-and-suppression-techniques.ipynb",
+    "docs/guides/serverless-first-program.ipynb",
+    "docs/guides/serverless-manage-resources.ipynb",
+    "docs/guides/serverless-run-first-workload.ipynb",
 ]
 
 # Don't test the following notebooks (this section can include glob patterns)
